css/style.css
/* ... */
#user_nav li a:hover { background: #fff; border:none; }
#user_nav li a:active { background: #eaffff; border:none; }
#user_nav li a.logout:hover { background: #d84945; color:#fff; }
#user_nav li a.logout:active { background: #ff5652; color:#fff; }
#user_nav li .selected { display:inline-block; background: #1e55c1; color:#fff; padding:10px 5px 3px 5px; border:none; }
/* in ADMIN mode */
#user_panel.inAdmin { background:#333; color:#fff; border-color:#000; height:45px;	}
#user_panel.inAdmin ul#user_nav > li a	{ display:inline-block; background: #aaa; }
#user_panel.inAdmin ul#user_nav > li a:hover { background: #fff; border:none; }
#user_panel.inAdmin ul#user_nav > li a:active { background: #eaffff; border:none; }
#user_panel.inAdmin ul#user_nav > li a.logout:hover  { background: #ff5652; color:#fff; }

#user_firm { position: absolute; bottom: 5px; right: 10px; }
#user_firm span { font-size: 11px; }
#user_firm .change-firm { font-size: 11px; }

#user_id	{ position: absolute; bottom: 5px; left: 10px; }
#user_id	span { display: block; font-size: 11px; }

/* ====== PATIENT ID ====== */
#patientID { background: #fff2d7 url(../img/_elements/gradients/bg_patientID.jpg) bottom left repeat-x; padding: 5px;
	border-right:2px solid #ffb212; border-bottom:2px solid #ffb212; border-left:2px solid #ffb212; }
.patientReminder { padding:4px 5px 0; font-size: 12px; background: url(../img/_elements/icons/patient/patient-id_small.png) top right no-repeat; }
.patientReminder .patientName { font-size: 16px; }
.patientReminder .patientName a { color: #000; }
.patientReminder .patientName a:hover,
.patientReminder .patientName a:active { color: #000; border-color: #000; }
.patientReminder .patientName .surname { font-weight: bold; }
.patientReminder .hospitalNumber { display:block; font-size: 12px; margin-top:1px; }
.patientReminder .nhsNumber { float: left; color:#fff; background: #107ebd url(../img/_elements/icons/nhs_tiny.png) center left no-repeat;
	margin: 1px 5px 0 0; padding:1px 4px 1px 33px; border-radius: 3px; }
.patientReminder .icons { float: left; margin: 1px 5px 0 0; padding: 0; height: 16px; }
.patientReminder .icons li { list-style: none; float: left; }
.patientReminder .icons li.gender { text-indent: -9999px; width: 16px; height: 16px; }
.patientReminder .icons li.gender.female { background: url(../img/_elements/icons/alerts/female_trans.png) center center no-repeat; }
.patientReminder .icons li.gender.male { background: url(../img/_elements/icons/alerts/male_trans.png) center center no-repeat; }
.patientReminder .hide { display: none; }
.patientReminder .i_patient { position: absolute; bottom: 7px; right: 10px; }
.patientReminder .i_patient a { font-size: 11px; }
.patientReminder .i_patient a:hover { }
/* generic surname */
span.surname { font-weight: bold; }

/* Drop information for Patient */
#patientID > .patient_quick { position:absolute; left:0; bottom:-20px; }

/* ------------------------------------------------- POPUP boxes	*/

.popup { width: 300px; border:5px solid #ccc; background:#efefef; text-align: center; padding:5px; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px;  }
#content .popup > p { margin-bottom:4px; }
#content .popup .action_options { margin: 10px 0;}
#content .popup .action_options .aBtn > a { padding:8px 10px 7px 10px; }
.popup.red { border-color: #cf2239; }

/* for lightbox that pops up with debug */
#support-info { float: right; margin-top: -1.2em; margin-right: 13em; font-size: 9px; font-weight: normal; color: #666; }
#support-info a { color: #666; }

/* to indicate that user is in training mode	*/
#h1-environment { float: right; font-size: 14px; margin-top: 0; margin-right: 0.9em; }


/* ------------------------------------------------- PAGE SPECIFIC	*/

/* ====== LOGIN ====== */
#login-form					{ width:350px; margin: 50px auto; padding:40px 30px 25px 30px; }
#login-form .loginRow		{ position:relative; height:55px; margin-bottom: 20px; text-align: right;}
#login-form .loginRow label { position:absolute; top:5px; left:10px; }
#login-form .loginRow input { position:absolute; top:0; right:0; width:200px; margin:0 0 5px 0; }
#login-form .loginRow a		{ position:absolute; bottom:0; right:0; }
#login-form .row			{ width:350px; text-align: right; margin-top:30px; }
#login-form .row label		{ margin-right: 5px;	}
#login-form .row select		{ position: relative; top:-1px; width:180px; }


/* ====== HOME HUB ====== */
/* default grouping */
.homeHub .group { margin-bottom:20px; }
/* default header & footer */
.homeHub h4 { font-family:Georgia Times sans-serif; font-style: italic; font-size:13px; background:#036; color:#eee; margin:0; padding:8px 10px; border-top:1px dotted #ccc; border-left:1px dotted #ccc; border-right:1px dotted #ccc;  }
.homeHub .footer { background:#888;  -webkit-border-bottom-right-radius: 5px; -webkit-border-bottom-left-radius: 5px; -moz-border-radius-bottomright: 5px; -moz-border-radius-bottomleft: 5px; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; }
/* white header & footer */
.homeHub h4.white { font-size:15px; background:#fff; color:#058; border:none; -webkit-border-top-right-radius: 5px; -webkit-border-top-left-radius: 5px; -moz-border-radius-topright: 5px; -moz-border-radius-topleft: 5px; border-top-right-radius: 5px; border-top-left-radius: 5px; }
.homeHub .footer.white { height:4px; background-color: #fff; }
/* to do */

/* tweak subtleWhite */
.subtleWhite thead.overline { border-top: 2px solid #fffbda; }
.subtleWhite thead.overline th { padding:8px 10px 2px 10px;  }

/* User details */
.homeHub .user { background:#036; border:1px dotted #ccc; color:#fff; padding:10px; margin-bottom:25px;}
.homeHub .user h3 { font-size: 27px; font-weight: lighter; }
.homeHub .user a { color:#a0f3ff; }
.homeHub .user a:hover { border-bottom-color:#a0f3ff; }

/* User profile */
.homeHub #user_profile { display:none; margin-top:20px; border-top:2px dotted #003; }
/* ... */

